--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,35 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  /* Customize these variable */
+  /* https://github.com/adamwathan/tailwind-css-variable-text-opacity-demo */
+  --tw-clr-primary-400: 0, 224, 243;
+  --tw-clr-primary-500: 0, 196, 253;
+
+  --clr-primary-400: rgb(var(--tw-clr-primary-400)); /* #00e0f3 */
+  --clr-primary-500: rgb(var(--tw-clr-primary-500)); /* #00c4fd */
+}
+
+@layer base {
+  h1 {
+    @apply tw-text-2xl tw-font-bold md:tw-text-4xl;
+  }
+
+  h2 {
+    @apply tw-text-xl tw-font-bold md:tw-text-3xl;
+  }
+
+  h3 {
+    @apply tw-text-lg tw-font-bold md:tw-text-2xl;
+  }
+
+  h4 {
+    @apply tw-text-base tw-font-bold md:tw-text-lg;
+  }
+
+  body {
+    @apply tw-text-sm md:tw-text-base;
+  }
+}
